# My_educational_work-PythonDjango

./: .gitignore
01_IntroductionToWebFrameworks/first_homework/: manage.py
01_IntroductionToWebFrameworks/first_homework/first_homework/: asgi.py  settings.py  urls.py  wsgi.py
03_DatabaseAndModels/mysite/mysite/: urls.py
04_DjangoAdmin/mysite/mysite/: settings.py
05_RequestsAndMiddlewares/mysite/mysite/: settings.py
05_RequestsAndMiddlewares/mysite/requestdataapp/: urls.py  views.py
07_HTML_CSS/homework/: index.html  styles.css
07_HTML_CSS/practice/: lesson_7.10_forms.html  lesson_7.11.html  lesson_7.11_styles.css  lesson_7.12.html  lesson_7.3.html  lesson_7.4.html  lesson_7.6.html  lesson_7.7.html  lesson_7.8.html  lesson_7.9_tables.html
11_Testing/mysite/myauth/: tests.py  urls.py  (+1 more)
12_Files/: requirements.txt
14_DRF/: requirements.txt
14_DRF/mysite/: requirements.txt
15_Docs/: requirements.txt
16_queries/mysite/: queries.sql
17_logging/: Dockerfile  demo.py  docker-compose.yaml
17_logging/mysite/: log.txt
18_import_export/: devices.csv  orders.csv  products-export.csv
18_import_export/mysite/: shopapp-products-fixtures.json  shopapp-products-fixtures.xml
19_Django_Cache/: requirements.txt
20_prod/: .env.template  Dockerfile  pyproject.toml
20_prod/mysite/mysite/: settings.py
HTML_CSS/homework/: index.html  styles.css
HTML_CSS/practice/: lesson_7.10_forms.html  lesson_7.11.html  lesson_7.11_styles.css  lesson_7.12.html  lesson_7.3.html  lesson_7.4.html  lesson_7.6.html  lesson_7.7.html  lesson_7.8.html  lesson_7.9_tables.html
(+149 files in other folders)
